Fixed sizing by making parent div absolute. Fixed vertical align by display:table and p: display: table-cell + vertical-align: middle

--- a/style/sass/iphone.scss
+++ b/style/sass/iphone.scss
@@ -4,6 +4,7 @@
 $maroon: #990033;
 
 #wrapper {
+	position: absolute;
 	height: 100%;
 	width: 100%;
 }
@@ -18,6 +19,12 @@ $maroon: #990033;
 	color: white;
 	font-size: 100px;
 	text-align: center;
+	display: table;
+}
+
+p {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 #food {
